samples/_failures_safe/1761481018_89b1d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16e9da78.c: In function ‘main’:
./samples/SAFE/__tmp_16e9da78.c:137:20: error: missing terminating " character
  137 |             printf("\nMatrix Addition Result
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_16e9da78.c:137:13: error: expected expression at end of input
  137 |             printf("\nMatrix Addition Result
      |             ^~~~~~
./samples/SAFE/__tmp_16e9da78.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_16e9da78.c:137:13: error: expected declaration or statement at end of input
